<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.linbing.androidassignment.MainActivity">

    <TextView
        android:id="@+id/image_title_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/image_title_activity" />
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"/>

    <TextView
        android:id="@+id/alert_dialog_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/alert_dialog_activity" />
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"/>
    <TextView
        android:id="@+id/menu_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/menu_activity" />
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"/>

    <TextView
        android:id="@+id/action_mode_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/action_mode_activity" />
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"/>
</LinearLayout>
